# kata-pytest-from-scratch

./: README.md  cli.py  foo.py  framework.py  pyproject.toml  test_foo.py  test_framework.py
